Notification page + event listenner

--- a/Frontend-MicroFrontends/Root-Conf/src/index.ejs
+++ b/Frontend-MicroFrontends/Root-Conf/src/index.ejs
@@ -91,6 +91,7 @@
                       <application name="@monkeysmedia/profile"></application>
                   </route>
                   <route path="/notifications/" exact>
+					  <application name="@monkeysmedia/navbar"></application>
                       <application name="@monkeysmedia/notifications-page"></application>
                   </route>
                   <route path="/chat/">
