Update to root-config redirect

--- a/Frontend-MicroFrontends/Root-Conf/src/index.ejs
+++ b/Frontend-MicroFrontends/Root-Conf/src/index.ejs
@@ -27,7 +27,7 @@
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js" as="script">
 
   <% if (isLocal) { %>
-    <script type="systemjs-importmap" src="http://mservices.themonkeysmedia.com/development.json"></script>
+    <script type="systemjs-importmap" src="./development.json"></script>
 	<% } else {%>
 	<script type="systemjs-importmap" src="http://mservices.themonkeysmedia.com/production.json"></script>
 	<% } %>
