update the production json url

--- a/Frontend-MicroFrontends/Root-Conf/src/index.ejs
+++ b/Frontend-MicroFrontends/Root-Conf/src/index.ejs
@@ -29,7 +29,7 @@
   <% if (isLocal) { %>
     <script type="systemjs-importmap" src="./development.json"></script>
 	<% } else {%>
-	<script type="systemjs-importmap" src="http://mservices.themonkeysmedia.com/production.json"></script>
+	<script type="systemjs-importmap" src="https://www.themonkeysmedia.com/production.json"></script>
 	<% } %>
 
       <script src="https://cdn.jsdelivr.net/npm/import-map-overrides@2.2.0/dist/import-map-overrides.js"></script>
