Adding the logo and changing the navbars height

--- a/Frontend-MicroFrontends/Root-Conf/src/index.ejs
+++ b/Frontend-MicroFrontends/Root-Conf/src/index.ejs
@@ -7,6 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>TheMonkeySMedia</title>
 
+  <link rel="shortcut icon" type="image/x-icon" href="http://localhost:8000/media/logo/logo.png" />
+
   <script src="https://cdn.jsdelivr.net/npm/regenerator-runtime@0.13.7/runtime.min.js"></script>
 
   <meta http-equiv="Content-Security-Policy"
