--- a/Frontend-MicroFrontends/Root-Conf/src/index.ejs
+++ b/Frontend-MicroFrontends/Root-Conf/src/index.ejs
@@ -7,12 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>TheMonkeySMedia</title>
 
-  <link rel="shortcut icon" type="image/x-icon" href="http://localhost:8000/media/logo/logo.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="http://api.themonkeysmedia.com:8000/media/logo/logo.png" />
 
   <script src="https://cdn.jsdelivr.net/npm/regenerator-runtime@0.13.7/runtime.min.js"></script>
 
-  <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self' https: localhost:*; script-src 'unsafe-inline' 'unsafe-eval' https: localhost:*; connect-src https: localhost:* ws://localhost:*; style-src 'unsafe-inline' https:; object-src 'none';">
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: localhost:*; script-src 'unsafe-inline' 'unsafe-eval' https: localhost:*; connect-src https: localhost:* ws://localhost:*; style-src 'unsafe-inline' https:; object-src 'none';"> -->
   <meta name="importmap-type" content="systemjs-importmap" />
 
   <script type="systemjs-importmap">
@@ -55,7 +54,7 @@
 	</script>
 
 	<% } else {%>
-	<script type="systemjs-importmap" src="https://www.themonkeysmedia.com/production.json"></script>
+	<script type="systemjs-importmap" src="https://www.themonkeysmedia.com:5000/production.json"></script>
 	<% } %>
 
       <script src="https://cdn.jsdelivr.net/npm/import-map-overrides@2.2.0/dist/import-map-overrides.js"></script>
