--- a/Frontend-MicroFrontends/Root-Conf/src/index.ejs
+++ b/Frontend-MicroFrontends/Root-Conf/src/index.ejs
@@ -21,6 +21,7 @@
         "react": "https://unpkg.com/react@17/umd/react.development.js",
         "react-dom": "https://unpkg.com/react-dom@17/umd/react-dom.development.js",
         "react-router-dom": "https://unpkg.com/react-router-dom@5.2.0/umd/react-router-dom.min.js",
+		"react-is": "https://unpkg.com/react-is@17.0.1/umd/react-is.production.min.js",
         "styled-components": "https://unpkg.com/styled-components@5.2.2/dist/styled-components.min.js"
       }
     }
